# chipmunk

./: .gitignore  .gitmodules  README.md  environment.yml  requirements.txt  setup.py
csrc/: README.md  chipmunk.cpp
csrc/attn/: csp_128_attn.cu  csp_attn.cu  dense_attn.cu  dense_colsum_attn.cu
csrc/common/: sparse_utils.cuh
csrc/common/memory/: global_to_shared.cuh
csrc/indexed_io/: mask_to_indices.cu  scatter_add.cu  scatter_add.cuh
csrc/mlp/: csp_mlp_mm1.cu  csp_mlp_mm2_and_scatter_add.cu
evals/prompts/: geneval.json  imre.json  vbench.json  vbench_all_prompts.json
evals/results/: flux_imre_table.csv
examples/flux/: README.md  batch_sample.py  chipmunk-config.yml  how-to-add-chipmunk-to-base-flux.patch  run.sh
examples/flux/configs/: ditfastattn-flux-config.yml  sta-flux-config.yml
examples/hidream-l1/: batch_sample.py  chipmunk-config.yml  inference.py
examples/hunyuan/: README.md  batch_sample.py  chipmunk-config.yml  run.py  run.sh  sample_video.py  test_run.py
examples/hunyuan/configs/: ditfastattn-hunyuan-config.yml  sta-hunyuan-config.yml  teacache-hunyuan-config.yml  toca-hunyuan-config.yml
examples/hunyuan/hyvideo/: config.py  constants.py  inference.py
examples/mochi/: README.md  batch_sample.py  chipmunk-config.yml  pyproject.toml
examples/mochi/demos/: cli.py
examples/mochi/src/genmo/mochi_preview/dit/joint_model/: asymm_models_joint.py
examples/wan/: batch_sample.py  chipmunk-config-sta.yml  chipmunk-config.yml  generate.py  run.sh
examples/wan/configs/: ditfastattn-hunyuan-config.yml  (+5 more)
src/chipmunk/: __init__.py  ops.py
(+62 files in other folders)
