[project]
name = "genmo"
version = "0.1.0"
description = "Genmo models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
flash = [
    "flash-attn>=2.6.3"
]

torchvision = [
    "torchvision>=0.15.0",
    "pyav>=13.1.0"
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
